# oss-rust-sdk

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: object.rs  oss.rs  service.rs  utils.rs
