[package]
name = "aliyun-oss-sdk"
version = "0.2.1"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/oss-rust-sdk"

[dependencies]
reqwest = { version = "0.10.6", features = ["json", "cookies"] }
base64 = "0.13.0"
chrono = "0.4.19"
rust-crypto = "0.2.36"
log = "0.4.14"
quick-xml = "0.22.0"
derive_more = "0.99.14"
bytes = "1.0.1"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["full"] }
